--- a/pipeline-object-detection-app.yaml
+++ b/pipeline-object-detection-app.yaml
@@ -61,7 +61,8 @@ spec:
     - name: deploy
       params:
         - name: SCRIPT
-          value: oc rollout status deploy/$(params.APP_NAME)
+          value: oc rollout restart deploy/$(params.APP_NAME);oc rollout status
+            deploy/$(params.APP_NAME) -w
       runAfter:
         - build
       taskRef:
