--- a/app/pipeline-mlapp-secure.yaml
+++ b/app/pipeline-mlapp-secure.yaml
@@ -20,7 +20,7 @@ spec:
       name: PATH_CONTEXT
       type: string
   tasks:
-    - name: fetch-repository
+    - name: git-clone
       params:
         - name: url
           value: $(params.GIT_REPO)
@@ -37,12 +37,13 @@ spec:
     - name: deploy
       params:
         - name: SCRIPT
-          value: oc rollout restart deploy/$(params.APP_NAME);oc rollout status
+          value: >-
+            oc rollout restart deploy/$(params.APP_NAME);oc rollout status
             deploy/$(params.APP_NAME) -w
       runAfter:
-        - stackrox-image-scan
-        - stackrox-image-check
-        - cosign
+        - acs-image-scan
+        - acs-image-check
+        - sign-image
       taskRef:
         kind: ClusterTask
         name: openshift-client
@@ -57,14 +58,14 @@ spec:
         - name: image
           value: 'ghcr.io/fabric8-analytics/crda-python:3.8'
       runAfter:
-        - pre-task-setup
+        - copy-dependencies
       taskRef:
         kind: Task
         name: redhat-codeready-dependency-analysis
       workspaces:
         - name: output
           workspace: workspace
-    - name: stackrox-image-scan
+    - name: acs-image-scan
       params:
         - name: rox_central_endpoint
           value: roxsecrets
@@ -72,17 +73,17 @@ spec:
           value: roxsecrets
         - name: image
           value: >-
-            quay.io/jstakun/$(params.IMAGE_NAME)@$(tasks.build.results.IMAGE_DIGEST)
+            quay.io/jstakun/$(params.IMAGE_NAME)@$(tasks.build-image.results.IMAGE_DIGEST)
         - name: output_format
           value: table
         - name: insecure-skip-tls-verify
           value: 'true'
       runAfter:
-        - skopeo-copy
+        - copy-image
       taskRef:
         kind: Task
         name: stackrox-image-scan
-    - name: stackrox-image-check
+    - name: acs-image-check
       params:
         - name: rox_central_endpoint
           value: roxsecrets
@@ -90,15 +91,15 @@ spec:
           value: roxsecrets
         - name: image
           value: >-
-            quay.io/jstakun/$(params.IMAGE_NAME)@$(tasks.build.results.IMAGE_DIGEST)
+            quay.io/jstakun/$(params.IMAGE_NAME)@$(tasks.build-image.results.IMAGE_DIGEST)
         - name: insecure-skip-tls-verify
           value: 'true'
       runAfter:
-        - skopeo-copy
+        - copy-image
       taskRef:
         kind: Task
         name: stackrox-image-check
-    - name: pre-task-setup
+    - name: copy-dependencies
       params:
         - name: file_url
           value: 'file://requirements.txt'
@@ -111,18 +112,18 @@ spec:
         - name: type
           value: python
       runAfter:
-        - fetch-repository
+        - git-clone
       taskRef:
         kind: Task
         name: pre-task-setup
       workspaces:
         - name: output
           workspace: workspace
-    - name: skopeo-copy
+    - name: copy-image
       params:
         - name: srcImageURL
           value: >-
-            docker://image-registry.openshift-image-registry.svc:5000/$(context.pipelineRun.namespace)/$(params.IMAGE_NAME)@$(tasks.build.results.IMAGE_DIGEST)
+            docker://image-registry.openshift-image-registry.svc:5000/$(context.pipelineRun.namespace)/$(params.IMAGE_NAME)@$(tasks.build-image.results.IMAGE_DIGEST)
         - name: destImageURL
           value: 'docker://quay.io/jstakun/$(params.IMAGE_NAME)'
         - name: srcTLSverify
@@ -130,14 +131,14 @@ spec:
         - name: destTLSverify
           value: 'true'
       runAfter:
-        - build
+        - build-image
       taskRef:
         kind: ClusterTask
         name: skopeo-copy
       workspaces:
         - name: images-url
           workspace: workspace
-    - name: cosign
+    - name: sign-image
       params:
         - name: cosignkey
           value: signing-secrets
@@ -146,14 +147,14 @@ spec:
         - name: namespace
           value: $(context.pipelineRun.namespace)
       runAfter:
-        - skopeo-copy
+        - copy-image
       taskRef:
         kind: Task
         name: cosign
       workspaces:
         - name: source
           workspace: workspace
-    - name: build
+    - name: build-image
       params:
         - name: IMAGE
           value: >-
