--- a/app/pipeline-mlapp-secure.yaml
+++ b/app/pipeline-mlapp-secure.yaml
@@ -174,6 +174,7 @@ spec:
           value: oci
         - name: BUILD_EXTRA_ARGS
           value: >-
+            --squash      
             --build-arg
             PIP_INDEX_URL=http://nexus.apps-infra.svc:8081/repository/pypi-proxy/simple/
             --build-arg PIP_TRUSTED_HOST=nexus.apps-infra.svc
