--- a/app/pipeline-mlapp-secure.yaml
+++ b/app/pipeline-mlapp-secure.yaml
@@ -56,7 +56,7 @@ spec:
         - name: pkg-installation-directory-path
           value: site-package
         - name: image
-          value: 'ghcr.io/fabric8-analytics/crda-python:3.8'
+          value: 'quay.io/jstakun/crda-python:3.8'
       runAfter:
         - copy-dependencies
       taskRef:
