--- a/app/pipeline-object-detection-app.yaml
+++ b/app/pipeline-object-detection-app.yaml
@@ -50,6 +50,8 @@ spec:
           value: $(params.PATH_CONTEXT)
         - name: VERSION
           value: $(params.VERSION)
+        - name: ENV_VARS
+          value: 'NPM_MIRROR=http://nexus.apps-infra.svc:8081/repository/npm-proxy/'
       runAfter:
         - fetch-repository
       taskRef:
