--- a/app/task-pre-task-setup.yaml
+++ b/app/task-pre-task-setup.yaml
@@ -28,9 +28,12 @@ spec:
         mkdir -p $(params.pkg-installation-directory-path)
         #curl $(params.file_url) --output $(params.manifest-file-path)
         if [ "$(params.type)" = "python" ]; then
-            pip3 install --target=$(params.pkg-installation-directory-path) \
+            pip3 install --trusted-host=nexus.apps-infra.svc \ 
+            --index-url=http://nexus.apps-infra.svc:8081/repository/pypi-proxy/simple/ \
+            --target=$(params.pkg-installation-directory-path) \
             -r $(params.manifest-file-path) --upgrade
         elif [ "$(params.type)" = "nodejs" ]; then
+            npm set registry http://nexus.apps-infra.svc:8081/repository/npm-proxy/
             npm install $(params.pkg-installation-directory-path)
         else
             echo "Invalid language " $(params.type)
