--- a/app/pipeline-object-detection-app-secure.yaml
+++ b/app/pipeline-object-detection-app-secure.yaml
@@ -49,7 +49,7 @@ spec:
         - name: VERSION
           value: $(params.VERSION)
         - name: ENV_VARS
-          value: 'NPM_MIRROR=http://nexus.apps-infra.svc:8081/repository/npm-proxy/'
+          value: ['NPM_MIRROR=http://nexus.apps-infra.svc:8081/repository/npm-proxy/']
       runAfter:
         - sca-dependency-analysis
       taskRef:
