--- a/app/pipeline-mlapp-secure.yaml
+++ b/app/pipeline-mlapp-secure.yaml
@@ -108,7 +108,7 @@ spec:
         - name: pkg-installation-directory-path
           value: site-package
         - name: image
-          value: 'ghcr.io/fabric8-analytics/crda-python:3.8'
+          value: 'quay.io/jstakun/crda-python:3.8'
         - name: type
           value: python
       runAfter:
