--- a/kafka/4-app-secret.yaml
+++ b/kafka/4-app-secret.yaml
@@ -13,6 +13,7 @@ stringData:
   KAFKA_SECURITY_PROTOCOL: SASL_PLAINTEXT
   KAFKA_SASL_MECHANISM: SCRAM-SHA-512
   KAFKA_USERNAME: ai-user
+  #oc get secret ai-user -n apps-kafka -o go-template --template="{{.data.password|base64decode}}"
   KAFKA_PASSWORD: <Kafka User SA password>
   KAFKA_TOPIC_IMAGES: images
   KAFKA_TOPIC_OBJECTS: objects
